// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode acp --help 1`] = `
"octocode acp

start ACP (Agent Client Protocol) server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: octocode.local)
                                                                [string] [default: "octocode.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
      --cwd          working directory [string] [default: "<HOME>"]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode mcp --help 1`] = `
"octocode mcp

manage MCP (Model Context Protocol) servers

Commands:
  octocode mcp add [name]     add an MCP server
  octocode mcp list           list MCP servers and their status                        [aliases: ls]
  octocode mcp auth [name]    authenticate with an OAuth-enabled MCP server
  octocode mcp logout [name]  remove OAuth credentials for an MCP server
  octocode mcp debug <name>   debug OAuth connection for an MCP server

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode attach --help 1`] = `
"octocode attach <url>

attach to a running octocode server

Positionals:
  url  http://localhost:4096                                                     [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --dir         directory to run in                                                     [string]
  -c, --continue    continue the last session                                              [boolean]
  -s, --session     session id to continue                                                  [string]
      --fork        fork the session when continuing (use with --continue or --session)    [boolean]
  -p, --password    basic auth password (defaults to OCTOCODE_SERVER_PASSWORD)              [string]
  -u, --username    basic auth username (defaults to OCTOCODE_SERVER_USERNAME or 'octo')[string]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode run --help 1`] = `
"octocode run [message..]

run octocode with a message

Positionals:
  message  message to send                                                     [array] [default: []]

Options:
  -h, --help                          show help                                            [boolean]
  -v, --version                       show version number                                  [boolean]
      --print-logs                    print logs to stderr                                 [boolean]
      --log-level                     log level [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                          run without external plugins                         [boolean]
      --command                       the command to run, use message for args              [string]
  -c, --continue                      continue the last session                            [boolean]
  -s, --session                       session id to continue                                [string]
      --fork                          fork the session before continuing (requires --continue or
                                      --session)                                           [boolean]
      --share                         share the session                                    [boolean]
  -m, --model                         model to use in the format of provider/model          [string]
      --agent                         agent to use                                          [string]
      --format                        format: default (formatted) or json (raw JSON events)
                                          [string] [choices: "default", "json"] [default: "default"]
  -f, --file                          file(s) to attach to message                           [array]
      --title                         title for the session (uses truncated prompt if no value
                                      provided)                                             [string]
      --attach                        attach to a running octocode server (e.g.,
                                      http://localhost:4096)                                [string]
  -p, --password                      basic auth password (defaults to OCTOCODE_SERVER_PASSWORD)
                                                                                            [string]
  -u, --username                      basic auth username (defaults to OCTOCODE_SERVER_USERNAME or
                                      'octo')                                           [string]
      --dir                           directory to run in, path on remote server if attaching
                                                                                            [string]
      --port                          port for the local server (defaults to random port if no value
                                      provided)                                             [number]
      --variant                       model variant (provider-specific reasoning effort, e.g., high,
                                      max, minimal)                                         [string]
      --thinking                      show thinking blocks                                 [boolean]
      --replay                        replay interactive session history on resume and after resize
                                      (use --no-replay to disable)         [boolean] [default: true]
      --replay-limit                  cap visible interactive replay to the newest N messages
                                                                                            [number]
  -i, --interactive                   run in direct interactive split-footer mode
                                                                          [boolean] [default: false]
      --dangerously-skip-permissions  auto-approve permissions that are not explicitly denied
                                      (dangerous!)                        [boolean] [default: false]
      --demo                          enable direct interactive demo slash commands; pass one as the
                                      message to run it immediately       [boolean] [default: false]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode debug --help 1`] = `
"octocode debug

debugging and troubleshooting tools

Commands:
  octocode debug config        show resolved configuration
  octocode debug lsp           LSP debugging utilities
  octocode debug rg            ripgrep debugging utilities
  octocode debug file          file system debugging utilities
  octocode debug scrap         list all known projects
  octocode debug skill         list all available skills
  octocode debug snapshot      snapshot debugging utilities
  octocode debug startup       print startup timing
  octocode debug agent <name>  show agent configuration details
  octocode debug v2            debug v2 catalog and built-in plugins
  octocode debug info          show debug information
  octocode debug paths         show global paths (data, config, cache, state)
  octocode debug wait          wait indefinitely (for debugging)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode providers --help 1`] = `
"octocode providers

manage AI providers and credentials

Commands:
  octocode providers list               list providers and credentials                 [aliases: ls]
  octocode providers login [url]        log in to a provider
  octocode providers logout [provider]  log out from a configured provider

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode agent --help 1`] = `
"octocode agent

manage agents

Commands:
  octocode agent create  create a new agent
  octocode agent list    list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode upgrade --help 1`] = `
"octocode upgrade [target]

upgrade octocode to the latest or a specific version

Positionals:
  target  version to upgrade to, for ex '0.1.48' or 'v0.1.48'                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -m, --method      installation method to use
                          [string] [choices: "curl", "npm", "pnpm", "bun", "brew", "choco", "scoop"]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode uninstall --help 1`] = `
"octocode uninstall

uninstall octocode and remove all related files

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
  -c, --keep-config  keep configuration files                             [boolean] [default: false]
  -d, --keep-data    keep session data and snapshots                      [boolean] [default: false]
      --dry-run      show what would be removed without removing          [boolean] [default: false]
  -f, --force        skip confirmation prompts                            [boolean] [default: false]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode serve --help 1`] = `
"octocode serve

starts a headless octocode server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: octocode.local)
                                                                [string] [default: "octocode.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode web --help 1`] = `
"octocode web

start octocode server and open web interface

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: octocode.local)
                                                                [string] [default: "octocode.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode models --help 1`] = `
"octocode models [provider]

list all available models

Positionals:
  provider  provider ID to filter models by                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --verbose     use more verbose model output (includes metadata like costs)           [boolean]
      --refresh     refresh the models cache from models.dev                               [boolean]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode stats --help 1`] = `
"octocode stats

show token usage and cost statistics

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --days        show stats for the last N days (default: all time)                      [number]
      --tools       number of tools to show (default: all)                                  [number]
      --models      show model statistics (default: hidden). Pass a number to show top N, otherwise
                    shows all
      --project     filter by project (default: all projects, empty string: current project)[string]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode export --help 1`] = `
"octocode export [sessionID]

export session data as JSON

Positionals:
  sessionID  session id to export                                                           [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --sanitize    redact sensitive transcript and file data                              [boolean]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode import --help 1`] = `
"octocode import <file>

import session data from JSON file or URL

Positionals:
  file  path to JSON file or share URL                                           [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode github --help 1`] = `
"octocode github

manage GitHub agent

Commands:
  octocode github install  install the GitHub agent
  octocode github run      run the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode pr --help 1`] = `
"octocode pr <number>

fetch and checkout a GitHub PR branch, then run octocode

Positionals:
  number  PR number to checkout                                                  [number] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode session --help 1`] = `
"octocode session

manage sessions

Commands:
  octocode session list                list sessions
  octocode session delete <sessionID>  delete a session

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode plugin --help 1`] = `
"octocode plugin <module>

install plugin and update config

Positionals:
  module  npm module name                                                        [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -g, --global      install in global config                              [boolean] [default: false]
  -f, --force       replace existing plugin version                       [boolean] [default: false]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode db --help 1`] = `
"octocode db

database tools

Commands:
  octocode db [query]     open an interactive sqlite3 shell or run a query                 [default]
  octocode db path        print the database path

Positionals:
  query  SQL query to execute                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --format      Output format                 [string] [choices: "json", "tsv"] [default: "tsv"]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode mcp list --help 1`] = `
"octocode mcp list

list MCP servers and their status

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode mcp add --help 1`] = `
"octocode mcp add [name]

add an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --url         URL for a remote MCP server                                             [string]
      --env         environment variable for a local MCP server (KEY=VALUE)                  [array]
      --header      HTTP header for a remote MCP server (KEY=VALUE)                          [array]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode mcp auth --help 1`] = `
"octocode mcp auth [name]

authenticate with an OAuth-enabled MCP server

Commands:
  octocode mcp auth list  list OAuth-capable MCP servers and their auth status         [aliases: ls]

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode mcp logout --help 1`] = `
"octocode mcp logout [name]

remove OAuth credentials for an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode providers list --help 1`] = `
"octocode providers list

list providers and credentials

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode providers login --help 1`] = `
"octocode providers login [url]

log in to a provider

Positionals:
  url  octocode auth provider                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -p, --provider    provider id or name to log in to (skips provider selection)             [string]
  -m, --method      login method label (skips method selection)                             [string]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode providers logout --help 1`] = `
"octocode providers logout [provider]

log out from a configured provider

Positionals:
  provider  provider id or name to log out from                                             [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode agent create --help 1`] = `
"octocode agent create

create a new agent

Options:
  -h, --help                  show help                                                    [boolean]
  -v, --version               show version number                                          [boolean]
      --print-logs            print logs to stderr                                         [boolean]
      --log-level             log level         [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  run without external plugins                                 [boolean]
      --path                  directory path to generate the agent file                     [string]
      --description           what the agent should do                                      [string]
      --mode                  agent mode            [string] [choices: "all", "primary", "subagent"]
      --permissions, --tools  comma-separated list of permissions to allow (default: all).
                              Available: "bash, read, edit, glob, grep, webfetch, task, todowrite,
                              websearch, lsp, skill"                                        [string]
  -m, --model                 model to use in the format of provider/model                  [string]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode agent list --help 1`] = `
"octocode agent list

list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode session list --help 1`] = `
"octocode session list

list sessions

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -n, --max-count   limit to N most recent sessions                                         [number]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode session delete --help 1`] = `
"octocode session delete <sessionID>

delete a session

Positionals:
  sessionID  session ID to delete                                                [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode github install --help 1`] = `
"octocode github install

install the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode github run --help 1`] = `
"octocode github run

run the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --event       GitHub mock event to run the agent for                                  [string]
      --token       GitHub personal access token (github_pat_********)                      [string]"
`;

exports[`octocode CLI help-text snapshots every documented command emits stable help text: octocode db path --help 1`] = `
"octocode db path

print the database path

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;
